@@ -3,6 +3,7 @@ Version 1.1.9 (released ??-???-????)
   * performance improvement: vcauth universal read access determinations
   * make revision log "extra pages" count configurable
   * fix Subversion 1.4.x revision log compatibility code regression
+  * display sanitized error when authzfile is malformed
 
 Version 1.1.8 (released 02-Dec-2010)
 
